[ 1640417 ] .COPY does not respect include/exclude [ 1637276 ] LST Import misses duplicate files [ 1640415 ] Duplicate Object Warning does not determine source of .COPY
Generally, most of this is done by converting most of the file references in PCGen from
Strings to URIs.  Please note URLs are not used because calling .equals or .hashCode
on a URL will result in DNS being invoked to resolve the URL.


git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@2077 ef53c05b-3124-4d59-ae7d-fe3273f42be7